--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html >
   <head>
-<meta charset=utf-8 /><title>I Scream For Ice Cream!</title>   </head>
+<meta charset=utf-8 /><title>I Scream For Ice Cream!</title> <link href="chrisw.github.io" rel="stylesheet" type="text/css" />  </head>
 <body>
         <h1>Most Popular Ice Cream Flavors </h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
