--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
 </head>
 <body>
-      <link href="chrisw.github.io" rel="stylesheet" type="text/css"> 
+      <link rel="stylesheet" type="text/css" href="style.css"> 
         <h1>Most Popular Ice Cream Flavors </h1>
         <table><tr><th>Rank</th><th>Flavor</th></tr>
         <tr><td>1</td><td>Vanilla</td></tr>
