--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang = "en" >
   <head>
 <meta charset=utf-8 />
-  <title>I Scream For Ice Cream!</title>
+  <title>I love Teachers</title>
   
 </head>
 <body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
-        <h1>Most Popular Ice Cream Flavors </h1>
-        <table><tr><th>Rank</th><th>Flavor</th></tr>
-        <tr><td>1</td><td>Vanilla</td></tr>
-        <tr><td>2</td><td>Strawberry</td></tr>
-        <tr><td>3</td><td>Chocolate</td></tr>
-        <tr><td>4</td><td>Cookies and Cream</td></tr>
-        <tr><td>5</td><td>Mint Chocolate Chip</td></tr></table>
+        <h1>My Favorite Teachers</h1>
+        <table><tr><th>Rank</th><th>Teacher</th></tr>
+        <tr><td>1</td><td>Goto</td></tr>
+        <tr><td>2</td><td>Goto</td></tr>
+        <tr><td>3</td><td>Goto</td></tr>
+        <tr><td>4</td><td>Goto</td></tr>
+        <tr><td>5</td><td>Goto</td></tr></table>
 </body>
 </html>
