--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
         <h1>My Favorite Teachers</h1>
-        <table><tr><th>Rank</th><th>Teacher</th></tr>
+        <table><tr><th>Rank</th><th>Teacher</th><th>Picture</th></tr>
         <tr><td>1</td><td>Goto</td></tr>
         <tr><td>2</td><td>Goto</td></tr>
         <tr><td>3</td><td>Goto</td></tr>
