--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 <body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
         <h1>My Favorite Teachers</h1>
-        <table><tr><th>Rank</th><th>Teacher</th><th>Picture</th></tr>
-        <tr><td>1</td><td>Goto</td>  </tr>
-        <tr><td>2</td><td>Goto</td>  </tr>
-        <tr><td>3</td><td>Goto</td>  </tr>
-        <tr><td>4</td><td>Goto</td>  </tr>
-        <tr><td>5</td><td>Goto</td>  </tr></table>
+        <table>
+          <tr>
+            <th>Rank</th>
+            <th>Teacher</th>
+            <th>Picture</th>
+          </tr>
+        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
+        <tr><td>2</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
+        <tr><td>3</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
+        <tr><td>4</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
+        <tr><td>5</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
+        </table>
 </body>
 </html>
