--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <th>Teacher</th>
             <th>Picture</th>
           </tr>
-        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
-        <tr><td>2</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
-        <tr><td>3</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
-        <tr><td>4</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
-        <tr><td>5</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="Matthew Goto" /></td>  </tr>
+        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
+        <tr><td>2</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
+        <tr><td>3</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
+        <tr><td>4</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
+        <tr><td>5</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         </table>
 </body>
 </html>
