--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
         <tr><td>5</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         </table>
         <a href="https://twitter.com/cwidin">@CWid</a>
+        <a href="https://twitter.com/stonebodini">@StoneBodini</a>
 </body>
 </html>
