--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <th>Rank</th>
             <th>Teacher</th>
             <th>Picture</th>
+            <th>Bio</th>
           </tr>
         <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         <tr><td>2</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
