--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <th>Bio</th>
           </tr>
         <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
-        <tr><td>2</td>   <td>Bennett</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
+        <tr><td>2</td>   <td>Bodini</td>   <td><img src="https://pbs.twimg.com/media/CY9Hc85UwAE7-vg.jpg" alt="" /></td>  </tr>
         <tr><td>3</td>   <td>Namba</td>   <td><img src="http://images.onset.freedom.com/ocvarsity/medium/m1ivbl-b78933935z.120120326193616000gvt16clpl.1.jpg" alt="" /></td>  </tr>
         <tr><td>4</td>   <td>Widin</td>   <td><img src="https://pbs.twimg.com/media/Bxr5SM-IAAA0hPt.jpg" alt="" /></td>  </tr>
         <tr><td>5</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
