--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>I love Teachers</title>
   
 </head>
-<body bgcolor="#4d1f00">
+<body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
         <h1>My Favorite Teachers</h1>
         <table>
