--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang = "en" >
   <head>
 <meta charset=utf-8 />
-  <title>I love Teachers</title>
+  <title>Mr.Goto's Favorite Pastimes</title>
   
 </head>
 <body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
-        <h1>My Favorite Teachers</h1>
+        <h1>Mr. Goto's Favorite Pastimes</h1>
         <table>
           <tr>
             <th>Rank</th>
-            <th>Teacher</th>
+            <th>Pastime</th>
             <th>Picture</th>
-            <th>Bio</th>
+            <th>Description</th>
           </tr>
-        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  <td>Mr.Goto is known to enjoy watching My Little Pony in his free time, his favorite pony being Princess Twilight Sparkle. He readily embraces his brony passion.</td>  </tr>
+        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  <td>Mr.Goto is known to enjoy watching My Little Pony in his free time, his favorite pony being Princess Twilight Sparkle. He readily embraces his brony passion and owns his fair share of My Little Pony memorabilia.</td>  </tr>
         <tr><td>2</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         <tr><td>3</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         <tr><td>4</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
