--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <th>Picture</th>
             <th>Description</th>
           </tr>
-        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  <td>Mr.Goto is known to enjoy watching My Little Pony in his free time, his favorite pony being Princess Twilight Sparkle. He readily embraces his brony passion and owns his fair share of My Little Pony memorabilia.</td>  </tr>
+        <tr><td>1</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  <td>Mr.Goto is known to enjoy watching My Little Pony in his free time, his favorite pony being Princess Twilight Sparkle. He readily embraces his brony passion and owns his fair share of My Little Pony memorabilia. He is able to recite every episode word by word.</td>  </tr>
         <tr><td>2</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         <tr><td>3</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
         <tr><td>4</td>   <td>Goto</td>   <td><img src="http://cdn4.sportngin.com/attachments/text_block/4568/7148/MattGoto_small.jpg" alt="" /></td>  </tr>
