--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
 <meta charset=utf-8 />
   <title>Mr.Goto's Favorite Pastimes</title>
-  
+   <link rel="icon" 
+     type="image/png" 
+     href="http://i2.kym-cdn.com/profiles/icons/tiny/000/085/390/My_Little_Pony_logo.png">
 </head>
 <body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
