--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en" >
   <head>
 <meta charset=utf-8 />
-  <title>Mr.Goto's Favorite Pastimes</title>
+  <title>Mr.Goto's Pastimes</title>
    <link rel="icon" 
      type="image/png" 
      href="http://i2.kym-cdn.com/profiles/icons/tiny/000/085/390/My_Little_Pony_logo.png">
