--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <td>When Mr. Goto has earned enough gains he takes time off to spend these gains at Kroq Weenie Roast. You will find him on the lawn and occasionally dangling over the railing trying to get to where the real seats are!</td>  </tr>
         
         </table>
+        Follow us on the blue bird
         <a href="https://twitter.com/cwidin">@CWid</a>
         <a href="https://twitter.com/stonebodini">@StoneBodini</a>
 </body>
