--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
      href="http://i2.kym-cdn.com/profiles/icons/tiny/000/085/390/My_Little_Pony_logo.png">
 </head>
 <body>
+    <style style="text/css">
+      .hoverTable{
+        width:100%;
+        border-collapse:collapse;
+      }
+      .hoverTable td{
+        padding:7px; border:#4e95f4 1px solid;
+      }
+      .hoverTable tr:hover{
+        background-color #ffff99;
+      }      
+    </style>
       <link rel="stylesheet" type="text/css" href="style.css"> 
         <h1>Mr. Goto's Favorite Pastimes</h1>
         <table>
