--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
       <link rel="stylesheet" type="text/css" href="style.css"> 
         <h1>Mr. Goto's Favorite Pastimes</h1>
-        <table class="hoverTable">
+        <table>
           <tr>
             <th>Rank</th>
             <th>Pastime</th>
