--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           </tr>
           <tr><td>1</td>   
           <td>My Little Pony</td>   
-          <td><a href="https://en.wikipedia.org/wiki/My_Little_Pony"></a><img src="https://lh3.googleusercontent.com/ukct2rRN5pNmauHoJaZpa119V3TuhmiFEo_bGvf-nEgGPcXp321cvu92vo_e3pogV-UY=w300" height="100" width="100" /></a></td>  
+          <td><a href="https://en.wikipedia.org/wiki/My_Little_Pony"><img src="https://lh3.googleusercontent.com/ukct2rRN5pNmauHoJaZpa119V3TuhmiFEo_bGvf-nEgGPcXp321cvu92vo_e3pogV-UY=w300" height="100" width="100" /></a></td>  
           <td>Mr.Goto is known to enjoy watching My Little Pony in his free time, his favorite pony being Princess Twilight Sparkle. He readily embraces his brony passion and owns his fair share of My Little Pony memorabilia.</td>  </tr>
         
           <tr><td>2</td>   
           <td>Making Gains</td>   
-         <td><img src="http://www.exercisegoals.com/images/muscletips1.jpg" height="100" width="100" /></td>  
+         <td><a href="http://www.muscleandfitness.com/workouts/workout-tips/3-rules-you-have-break-make-gains"><img src="http://www.exercisegoals.com/images/muscletips1.jpg" height="100" width="100" /></a></td>  
          <td>Mr.Goto is an animal at the gym. When he's not enjoying MLP, you can find him pumping iron and getting yolked. Nothing but gains for Goto.</td>  </tr>
         
          <tr><td>3</td>  
